--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "mern_crud",
   "version": "1.0.0",
-  "description": "App crud with autentication",
+  "description": "App web autentication",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "dev": "nodemon src/index.ts"
   },
@@ -13,17 +12,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.11",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5",
-    "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "@types/morgan": "^1.9.9"
   }
 }
