--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.55.0",
     "axios": "^1.7.2",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.53.0",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
