--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  /* vite default */
   "files": [],
   "references": [
     {
@@ -7,5 +8,15 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+
+  /* shadcn/ui */
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
+  }
 }
