update => format (error to compile)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,21 +2,13 @@
   /* vite default */
   "files": [],
   "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.node.json"
-    }
+    {"path": "./tsconfig.app.json"},
+    {"path": "./tsconfig.node.json"}
   ],
 
   /* shadcn/ui */
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    }
+    "paths": { "@/*": ["./src/*"] }
   }
 }
