update => implementing config on tsconfig.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,12 @@
     {"path": "./tsconfig.app.json"},
     {"path": "./tsconfig.node.json"}
   ],
-
   /* shadcn/ui */
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": { "@/*": ["./src/*"] }
+    "paths": {
+      "@/*": ["./src/*"],
+      "#/*": ["./src/components/*"]
+    }
   }
 }
