warning => delete path #

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,6 @@
   /* shadcn/ui */
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"],
-      "#/*": ["./src/components/*"]
-    }
+    "paths": { "@/*": ["./src/*"] }
   }
 }
