--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,8 +28,5 @@
       "#/*": ["./src/components/*"]
     }
   },
-  "include": [
-    "src",
-    "../src/components"
-  ]
+  "include": ["src"]
 }
