--- a/package.json
+++ b/package.json
@@ -22,24 +22,23 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-query": "^5.55.0",
-    "axios": "^1.7.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "dayjs": "^1.11.13",
-    "framer-motion": "^11.11.9",
-    "js-cookie": "^3.0.5",
-    "lucide-react": "^0.441.0",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-day-picker": "^8.10.1",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.25.1",
-    "tailwind-merge": "^2.5.2",
+    "react-dom": "^18.3.1",
+    "react": "^18.3.1",
+    "class-variance-authority": "^0.7.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.5"
+    "tailwind-merge": "^2.5.2",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.441.0",
+    "js-cookie": "^3.0.5",
+    "date-fns": "^3.6.0",
+    "zustand": "^4.5.5",
+    "axios": "^1.7.2",
+    "dayjs": "^1.11.13",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.53.0",
