--- a/package.json
+++ b/package.json
@@ -20,18 +20,23 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-query": "^5.55.0",
+
     "react-lazy-load-image-component": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
     "react-day-picker": "^8.10.1",
-    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.25.1",
+    "react-hook-form": "^7.53.0",
     "react-dom": "^18.3.1",
     "react": "^18.3.1",
-    "class-variance-authority": "^0.7.0",
+
     "tailwindcss-animate": "^1.0.7",
     "tailwind-merge": "^2.5.2",
     "clsx": "^2.1.1",
+
+    "framer-motion": "^11.11.10",
     "lucide-react": "^0.441.0",
     "js-cookie": "^3.0.5",
     "date-fns": "^3.6.0",
@@ -41,23 +46,25 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^5.53.0",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.5.4",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-lazy-load-image-component": "^1.6.4",
-    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
+    "@tanstack/eslint-plugin-query": "^5.53.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
+
+    "@types/react-lazy-load-image-component": "^1.6.4",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.3",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^22.5.4",
+
     "eslint-plugin-react-refresh": "^0.4.7",
-    "postcss": "^8.4.40",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "autoprefixer": "^10.4.19",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.6.2",
+    "postcss": "^8.4.40",
+    "eslint": "^8.57.0",
     "vite": "^5.3.4"
   }
 }
