--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "redirects": [
-    {
-      "source": "/(.*)",
-      "destination": "https://mern-crud-mitchels-projects-e79670f5.vercel.app/"
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
