--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@react-spring/web": "^9.7.5",
+    "@tabler/icons-react": "^3.24.0",
     "@tanstack/react-query": "^5.55.0",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
@@ -34,7 +35,7 @@
     "dayjs": "^1.11.13",
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.1",
-    "framer-motion": "^11.11.11",
+    "framer-motion": "^11.13.5",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
@@ -43,7 +44,7 @@
     "react-hook-form": "^7.53.0",
     "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^6.25.1",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
