--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "dayjs": "^1.11.13",
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.1",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.13.5",
-    "js-cookie": "^3.0.5",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -56,7 +56,6 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.53.0",
-    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
