--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-spring/web": "^9.7.5",
     "@tabler/icons-react": "^3.24.0",
@@ -46,6 +50,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-rough-notation": "^1.0.5",
     "react-router-dom": "^6.25.1",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
