[IMPLEMENTED => qiita to publish articles]

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@qiita/qiita-cli": "^1.6.1",
     "@tanstack/eslint-plugin-query": "^5.53.0",
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.3",
