--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,5 +25,5 @@ jobs:
           fetch-depth: 0
       - uses: increments/qiita-cli/actions/publish@v1
         with:
-          qiita-token: ${{ secrets.QIITA }}
+          qiita-token: ${{ secrets.QIITA_TOKEN }}
           root: "."
