--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,10 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
+      - name: Check if secret is available
+        run: echo "Token length: ${#QIITA_TOKEN}"
+        env:
+          QIITA_TOKEN: ${{ secrets.QIITA_TOKEN }}
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
