--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tabler/icons-react": "^3.24.0",
     "@tanstack/react-query": "^5.55.0",
     "@tanstack/react-table": "^8.20.5",
+    "@types/file-saver": "^2.0.7",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -49,6 +50,7 @@
     "dayjs": "^1.11.13",
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.13.5",
     "lucide-react": "^0.441.0",
     "nuqs": "^2.3.2",
