--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-# .github/workflows/qiita.yml
+# .github/workflows/publish.yml
 name: "GitHub to Qiita"
 
 on:
@@ -19,10 +19,13 @@ jobs:
   qiita:
     runs-on: ubuntu-latest
     steps:
-      - name: "Publish qiita article"
-        uses: mitchel2003/mern_crud@v0.0.0
-        with:
-          # dir: "articles"
-          qiita_access_token: ${{ secrets.QIITA_ACCESS_TOKEN }}
-          mapping_filepath: "mapping.txt"
-          strict: false
+    - name: Checkout del repositorio
+      uses: actions/checkout@v4
+
+    - name: Publicar en Qiita
+      uses: increments/qiita-cli/actions/publish@v1
+      with:
+        qiita_access_token: ${{ secrets.QIITA_ACCESS_TOKEN }}
+        mapping_filepath: "mapping.txt"
+        strict: false
+        root: "."
