--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,10 +22,13 @@ jobs:
     - name: Checkout del repositorio
       uses: actions/checkout@v4
 
+    - name: Instalar qiita-cli
+      run: npm install -g @qiita/qiita-cli@v1.6.1
+
+    - name: Configurar credenciales de Qiita
+      run: |
+        mkdir -p ~/.config/qiita-cli
+        echo '{"qiita_access_token": "${{ secrets.QIITA_ACCESS_TOKEN }}"}' > ~/.config/qiita-cli/credentials.json
+
     - name: Publicar en Qiita
-      uses: increments/qiita-cli/actions/publish@v1
-      with:
-        qiita_access_token: ${{ secrets.QIITA_ACCESS_TOKEN }}
-        mapping_filepath: "mapping.txt"
-        strict: false
-        root: "."
+      run: qiita publish --all --root .
