--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,18 +19,18 @@ jobs:
   qiita:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout del repositorio
+    - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Instalar qiita-cli
-      run: npm install -g @qiita/qiita-cli@v1.6.1
+    # - name: Instalar qiita-cli
+    #   run: npm install -g @qiita/qiita-cli@v1.6.1
 
-    - name: Configurar credenciales de Qiita
+    - name: Config credentials
       run: |
         mkdir -p ~/.config/qiita-cli
         echo '{"qiita_access_token": "${{ secrets.QIITA_ACCESS_TOKEN }}"}' > ~/.config/qiita-cli/credentials.json
 
-    - name: Publicar en Qiita
+    - name: Publish
       uses: increments/qiita-cli/actions/publish@v1
       with:
         qiita-token: ${{ secrets.QIITA_ACCESS_TOKEN }}
