--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.4.6",
+    "@mui/x-date-pickers": "^7.27.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -53,6 +58,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^11.13.5",
     "lucide-react": "^0.441.0",
+    "material-react-table": "^3.2.1",
     "nuqs": "^2.3.2",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
