--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.13.5",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.441.0",
     "material-react-table": "^3.2.1",
     "react": "^18.3.1",
@@ -74,6 +76,7 @@
   "devDependencies": {
     "@qiita/qiita-cli": "^1.6.1",
     "@tanstack/eslint-plugin-query": "^5.53.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -89,6 +92,6 @@
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.6.2",
-    "vite": "^5.3.4"
+    "vite": "^6.2.1"
   }
 }
