--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
+    "terser": "^5.39.0",
     "typescript": "^5.6.2",
     "vite": "^6.2.1"
   }
