--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "embla-carousel-react": "^8.3.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.13.5",
+    "html5-qrcode": "^2.3.8",
     "jszip": "^3.10.1",
     "lucide-react": "^0.441.0",
     "material-react-table": "^3.2.1",
