[QRCODE => add download qrs (table curriculums)] + [FIX => scanner]

--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^11.13.5",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^3.0.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.441.0",
     "material-react-table": "^3.2.1",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-day-picker": "^8.10.1",
@@ -77,6 +79,7 @@
     "@tanstack/eslint-plugin-query": "^5.53.0",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^22.5.4",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-lazy-load-image-component": "^1.6.4",
