[FCM => config messaging.service] + [STORAGE => on frontend to improve performance of backend (less request)] + [ENVIROMENT_VARIABLES => to use fb] + [FORMATE_LINES]

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.1",
     "file-saver": "^2.0.5",
+    "firebase": "^11.6.0",
     "framer-motion": "^11.13.5",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.1",
