--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tanstack/react-query": "^5.55.0",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
+    "axios-cache-interceptor": "^1.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
